--- a/css/lab1.css
+++ b/css/lab1.css
@@ -18,7 +18,6 @@ nav ul {
 nav li {
     display: inline-block;
     padding: 17px;
-    color: #A52A2A;
 }
 
 div {
@@ -77,4 +76,17 @@ footer {
 
 u {
     color: #551A8B;
+}
+
+a {
+    text-decoration: none;
+    color: #A52A2A;
+}
+
+a:hover {
+    color: #FFFFFF;
+}
+
+.active {
+    color: #FFFFFF;
 }
