--- a/css/lab2.css
+++ b/css/lab2.css
@@ -26,7 +26,7 @@ form label {
     font-weight: bold;
 }
 
-input[type=text], input[type=date] {
+input[type=text] {
     position: relative;
     width: 90%;
     border-radius: 7px;
@@ -39,7 +39,7 @@ input[type=text], input[type=date] {
     color: grey;
 }
 
-input[type=text]:focus, input[type=date]:focus {
+input[type=text]:focus {
     background-color: #FFFD37;
     color: #000000;
 }
