--- a/css/lab4.css
+++ b/css/lab4.css
@@ -1,6 +1,6 @@
 #chat {
     position: fixed;
-    background-color: maroon;
+    /*background-color: maroon;*/
     top: 100px;
     left: 0;
     width: 300px;
@@ -15,20 +15,51 @@
 #chat_header {
     background-color: #DCB789;
     color: #A22B2D;
-    display: block;
     width: 100%;
+    height: 20%;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+* {
+    box-sizing: border-box;
 }
 
 #chat_header > * {
     display: inline-block;
 }
 
-#chat form {
-    width: 100%;
-    /*float: left;*/
-    /*position: relative;*/
+#chat_header > h2 {
+    margin-right: 35%;
 }
 
-.fa-times {
-    margin-right: 0;
+#chat form {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 78%;
+    border-radius: 10px;
 }
+
+#chat form * {
+    display: block;
+}
+
+#authenticate {
+    margin-left: 5.5%;
+    border: 0;
+    background-color: #BBBBBB;
+    height: 30px;
+    width: 100px;
+    border-radius: 7px;
+    margin-top: 15px;
+    font-weight: bold;
+}
+
+/*#password + label {
+    display: inline;
+}
+
+#password + label + input {
+    display: inline;
+}*/
